src/objects/EMP_Farm_Baseline__c.object
<CustomObject>
    <fields>
        <fullName>Agrochemicals_Disposal__c</fullName>
        <label>Agrochemicals Disposal</label>
        <picklist>
            <picklistValues>
                <fullName>En Quemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En Ríos y Quebradas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reutilización en Hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajo Tierra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reciclaje Carro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recolector Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En relleno sanitario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPA_Certified__c</fullName>
        <label>BPA Certified</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Children_Participation__c</fullName>
        <label>Children Participation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercialization_Agreements__c</fullName>
        <label>Commercialization Agreements</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercialization_Location__c</fullName>
        <label>Commercialization Location</label>
        <picklist>
            <picklistValues>
                <fullName>Mercado Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercado Mayorista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediarios o Acopiadores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vía asociación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercados internacionales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Crop_Product__c</fullName>
        <label>Crop/Product</label>
        <picklist>
            <picklistValues>
                <fullName>Plátano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caña panelera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plátano de exportación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yuca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate de árbol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naranja valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ñame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banano manzano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cítricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palma de aceite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maracuyá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guayaba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortensia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granadilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lima tahiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrapo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lulo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arracacha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uchuva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frijol Cardamomo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crop_Rotation__c</fullName>
        <label>Crop Rotation</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cycle_Applications__c</fullName>
        <label>Cycle Applications</label>
        <picklist>
            <picklistValues>
                <fullName>1 a 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 a 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 a 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 a 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 a 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Más de 26</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Birth__c</fullName>
        <label>Date Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>C.C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T.I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMP_Farm_Baseline__c</fullName>
        <label>EMP Farm Baseline</label>
        <referenceTo>EMP_Farm__c</referenceTo>
        <relationshipLabel>EMP Farm Baselines</relationshipLabel>
        <relationshipName>EMP_Farm_Baselines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>E-Mail</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Economic_Activity__c</fullName>
        <label>Economic Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción agropecuaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicios domésticos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicios generales/ trabajadores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arriendo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios (Familias en Acción,Proyectos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensionado/jubilado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial (Tienda, negocio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicios profesionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sin Información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS/NR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Employees_Training__c</fullName>
        <label>Employees Training</label>
        <picklist>
            <picklistValues>
                <fullName>Operación de equipos peligrosos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedimientos de higiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso, manejo y disposición de pesticidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primeros auxilios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedimientos accidentes y emergencias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niguna de las anteriores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No han sido capacitados</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farm_District__c</fullName>
        <label>Farm District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Municipality__c</fullName>
        <label>Farm Municipality</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Region__c</fullName>
        <label>Farm Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Type__c</fullName>
        <label>Farm Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parcela Demostrativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réplica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farm_Village__c</fullName>
        <label>Farm Village</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Growing_Infrastructure__c</fullName>
        <label>Growing Infrastructure</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income_Composition__c</fullName>
        <label>Income Composition</label>
        <picklist>
            <picklistValues>
                <fullName>Salario y/o pensión</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distinto al rubro del proyecto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proveniente del rubro del proyecto</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Empresa Comunitaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precooperativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asociación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junta de Acción Comunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sociedad Agraria de Transformación S.A.T</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Irrigation_System_Origin__c</fullName>
        <label>Irrigation System Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Agua lluvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quebrada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acueducto Veredal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nacimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Irrigation_System__c</fullName>
        <label>Irrigation System</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimal_Tillage__c</fullName>
        <label>Minimal Tillage</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <picklist>
            <picklistValues>
                <fullName>Menos de un SMLMV:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entre 1 y 2 SMLMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Más de 2 SMLMV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_Employees__c</fullName>
        <label>Num Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Entre 2 y 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entre 4 y 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mas de 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packages__c</fullName>
        <label>Packages</label>
        <picklist>
            <picklistValues>
                <fullName>Cajas de madera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cajas plasticas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cajas de cartón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Permanent_Employees__c</fullName>
        <label>Permanent Employees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Type__c</fullName>
        <label>Population Type</label>
        <picklist>
            <picklistValues>
                <fullName>Afrocolombiano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indígena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Kilo__c</fullName>
        <label>Price/Kilo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Product_Commercialization__c</fullName>
        <label>Processing Product Commercialization</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Product_Location__c</fullName>
        <label>Processing Product Location</label>
        <picklist>
            <picklistValues>
                <fullName>Tiendas de barrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almacenes de cadena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Processing_Product__c</fullName>
        <label>Processing Product</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <label>Processing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conservas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encurtidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlatados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deshidratados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Producer_Name__c</fullName>
        <label>Producer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Costs__c</fullName>
        <label>Production Costs</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Productive_Sector__c</fullName>
        <label>Productive Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Traded__c</fullName>
        <label>Products Traded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Total_Area__c</fullName>
        <label>Reference Total Area</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_Credit__c</fullName>
        <label>Requires Credit</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scholarship_Level__c</fullName>
        <label>Scholarship Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bachillerato Completo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachillerato Incompleto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posgrado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preescolar incompleto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primaria Completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primaria incompleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sin información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnica completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnica incompleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tecnológica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universitaria completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universitaria Incompleta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slope_Planting__c</fullName>
        <label>Slope Planting</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sowing_Area__c</fullName>
        <label>Sowing Area</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Farm Baselines</relationshipLabel>
        <relationshipName>EMP_Farm_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <label>Subregion</label>
        <picklist>
            <picklistValues>
                <fullName>Valle de Aburrá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajo Cauca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magdalena Medio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noroeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occidente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oriente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suroeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urabá</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temporary_Employees__c</fullName>
        <label>Temporary Employees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cultivated_Area__c</fullName>
        <label>Total Cultivated Area</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triple_Washed__c</fullName>
        <label>Triple Washed</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Under_Eighteen__c</fullName>
        <label>Under Eighteen</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Credit__c</fullName>
        <label>User Credit</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vulnerable_population__c</fullName>
        <label>Vulnerable population</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desmovilizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desplazado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discapacitado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGTBI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wastewater_Management__c</fullName>
        <label>Wastewater Management</label>
        <picklist>
            <picklistValues>
                <fullName>Pozo séptico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumidero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuentes de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intemperie</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Water_Concession__c</fullName>
        <label>Water Concession</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EMP Farm Baseline</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Farm Baseline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Farm Baselines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>